--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body class="bg-dark text-light">
         <header class="container-fluid">
-            <nav class="nabbar fixed-top navbar-dark">
+            <nav class="nabbar navbar-dark">
                 <font size="6"><a class="navbar-brand" href="#">Spoon Saver Calander</a></font>
                 <menu class="navbar-nav">
                     <li class="nav-item">
