--- a/about.html
+++ b/about.html
@@ -4,19 +4,32 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Spoon Saver Calander</title>
+
+        <link rel="stylesheet" href="about.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     </head>
-    <body>
-        <header>
-            <h1>Spoon Saver Calander</h1>
-            <nav>
-                <menu>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="calander.html">View Calander</a></li>
-                    <li><a href="analysis.html">Spoon Analysis</a></li>
-                    <li><a href="about.html">About</a></li>
+    <body class="bg-dark text-light">
+        <header class="container-fluid">
+            <nav class="nabbar navbar-dark">
+                <font size="6"><a class="navbar-brand" href="#">Spoon Saver Calander</a></font>
+                <menu class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="calander.html">View Calander</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="analysis.html">Spoon Analysis</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="about.html">About</a>
+                    </li>
                 </menu>
             </nav>
-            <hr />
         </header>
 
         <main>
@@ -33,11 +46,12 @@
             <div id="picture" class="picture-box"><img width="400px" src="placeholder.png" /></div>
         </main>
 
-        <footer>
-            <hr />
-            <span class="author">Website created by Packer Barlow</span>
-            <br />
-            <a href="https://github.com/packerb2/Introvert_Calander_Startup.git">My GitHub</a>
+        <footer class="bg-dark text-white-50">
+            <div class="container-fluid">
+                <hr />
+                <span class="text-rest">Website created by Packer Barlow</span>
+                <a class="text-reset" href="https://github.com/packerb2/Introvert_Calander_Startup.git">My GitHub</a>
+                </div>
         </footer>
     </body>
 
