--- a/about.html
+++ b/about.html
@@ -36,14 +36,16 @@
             <p>
                 The name of this calander came from "Spoon Theory". This theory states that each person only has a limited amount of energy
                 each day that they can spend on any given task. This energy is measured in spoons as a way of visualizing how much energy
-                an activity takes.
+                an activity takes. Once a spoon is spent, it cannot be used for another activity. If a person runs out of spoons, even simple
+                tasks become impossible.
             </p>
 
             <p>
                 The goal of this calander is to help people to better visualize where their energy, or spoons, are being spent and to assist
                 in better managing their energy so that they can avoid burnout and focus on whatever is most important to them.
             </p>
-            <div id="picture" class="picture-box"><img width="400px" src="placeholder.png" /></div>
+            <div id="picture" class="picture-box"><img width="600px" src="feature-image-spoon-theory-jpg.webp" /></div>
+            <p class="credit">Image by Ackadia</p>
         </main>
 
         <footer class="bg-dark text-white-50">
