--- a/calander.html
+++ b/calander.html
@@ -364,8 +364,8 @@
                 </table>
             </div>
 
-            <ul class="selected-day">
-                <p class="event-name">Event 1:
+            <ul class="selectedday">
+                <div class="event">Event 1:
                     <li class="participants">Joe is coming</li>
                     <li>Select Spoons:</li>
                     <button class="addspoon">Long Distance</button>
@@ -375,9 +375,9 @@
                     <button class="addspoon">Hosting</button>
                     <li class="spoon-rating">Spoon score: x</li>
                     <li><button class="soft">Hope for Cancel</button> <button class="cancel">Cancel Event</button></li>
-                </p>
+                </div>
                 <hr />
-                <p class="event-name">Event 2:
+                <div class="event">Event 2:
                     <li class="participants">Joe is coming</li>
                     <li>Select Spoons:</li>
                     <button class="addspoon">Long Distance</button>
@@ -387,7 +387,7 @@
                     <button class="addspoon">Hosting</button>
                     <li class="spoon-rating">Spoon score: x</li>
                     <li><button class="soft">Hope for Cancel</button> <button class="cancel">Cancel Event</button></li>
-                </p>
+                </div>
             <p></p>
             </ul>
         </main>
