--- a/calander.html
+++ b/calander.html
@@ -17,7 +17,7 @@
                 <font size="6"><a class="navbar-brand" href="#">Spoon Saver Calander</a></font>
                 <menu class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="login.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="calander.html">View Calander</a>
